--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(draw_obj_3d C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(draw_obj_3d main.c)
+find_package(SDL2 REQUIRED)
+
+add_executable(draw_obj_3d main.c render3d.c color.c video.c)
+
+target_link_libraries(draw_obj_3d ${SDL2_LIBRARIES})
